src/test/deca/context/invalid/exp_print_null.deca
// Test la règle 3.31: On ne peut pas print un objet dont le type n'est ni un
// flottant, ni un entier, ni un string

{
    print(null);
}

// Resultat:
//# TODOTEST 
